update and add dashloader

--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -24,6 +24,14 @@
       }
     },
     {
+      "projectID": 228525,
+      "fileID": 3695436,
+      "required": true,
+      "__meta": {
+        "name": "Bookshelf"
+      }
+    },
+    {
       "projectID": 242064,
       "fileID": 3671377,
       "required": true,
@@ -322,7 +330,7 @@
     },
     {
       "projectID": 366140,
-      "fileID": 3675475,
+      "fileID": 3701747,
       "required": true,
       "__meta": {
         "name": "Dynamic View[Forge/Fabric]"
@@ -338,7 +346,7 @@
     },
     {
       "projectID": 377109,
-      "fileID": 3631576,
+      "fileID": 3697307,
       "required": true,
       "__meta": {
         "name": "Tool Stats"
@@ -346,7 +354,7 @@
     },
     {
       "projectID": 381257,
-      "fileID": 3555013,
+      "fileID": 3709325,
       "required": true,
       "__meta": {
         "name": "CompleteConfig"
@@ -459,7 +467,7 @@
     },
     {
       "projectID": 401648,
-      "fileID": 3667534,
+      "fileID": 3707871,
       "required": true,
       "__meta": {
         "name": "BetterF3"
@@ -514,7 +522,7 @@
     },
     {
       "projectID": 419697,
-      "fileID": 3684742,
+      "fileID": 3705894,
       "required": true,
       "__meta": {
         "name": "Architectury API (Fabric)",
@@ -571,7 +579,7 @@
     },
     {
       "projectID": 433760,
-      "fileID": 3523463,
+      "fileID": 3699198,
       "required": true,
       "__meta": {
         "name": "Not Enough Animations"
@@ -587,7 +595,7 @@
     },
     {
       "projectID": 440979,
-      "fileID": 3680650,
+      "fileID": 3707010,
       "required": true,
       "__meta": {
         "name": "WTHIT",
@@ -714,6 +722,14 @@
       }
     },
     {
+      "projectID": 472772,
+      "fileID": 3706503,
+      "required": true,
+      "__meta": {
+        "name": "DashLoader"
+      }
+    },
+    {
       "projectID": 473492,
       "fileID": 3487949,
       "required": true,
@@ -731,7 +747,7 @@
     },
     {
       "projectID": 477078,
-      "fileID": 3561474,
+      "fileID": 3709988,
       "required": true,
       "__meta": {
         "name": "Custom Entity Models (CEM)"
@@ -998,7 +1014,7 @@
     },
     {
       "projectID": 563977,
-      "fileID": 3692488,
+      "fileID": 3697550,
       "required": true,
       "__meta": {
         "name": "Puzzle",
@@ -1029,7 +1045,7 @@
     },
     {
       "projectID": 594044,
-      "fileID": 3695622,
+      "fileID": 3697289,
       "required": true,
       "__meta": {
         "name": "Better Loading Screen"
